Improve the home and footer components
Note: However, there are other parts that need to be improved too.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,47 +1,31 @@
 
 <!-- <img src="assets/icons/sceiba.footer.top.2.svg" alt="" style="margin-bottom: -8px; width: 100%;" /> -->
-<div class="w-100 bg-primary-color" fxLayout="row wrap" fxLayout.mx="column" fxLayoutAlign="center center">
+<!-- <div class="w-100 bg-primary-color" fxLayout="row wrap" fxLayout.mx="column" fxLayoutAlign="center center"> -->
+<div class="bg-primary-color" fxLayout="column" fxLayoutAlign="center center">
 
-    <div
-        fxLayout="row wrap"
-        fxLayout.mx="column"
-        fxLayoutAlign="space-between center"
-        fxLayoutGap="20px"
-        style="width:100%; padding-top: 2em;"
-    >
-        <div class="footer-logo"
-            fxFlex=40%
-            fxFlex.xs=100%
-            fxLayoutAlign="right center"
-            fxLayout="row"
-            [ngStyle.xs]="{'padding-top': '40px', 'padding-bottom': '20px'}"
-        >
-        <a href="https://tocororo.upr.edu.cu" target="_blank" style="color: rgb(0, 0, 0, 0.87); text-decoration: none;">
-          <img src="/assets/images/tocororo.png" [alt]="'PROYECTO_TOCORORO' | translate" width="50" height="50" />
-        </a>
-
-        <!-- <img src="/assets/images/tocororo.png" [alt]="'PROYECTO_TOCORORO' | translate" width="50" height="50" />
-            <span class="text-initial" style="max-width: 30em; padding-left: 10px; color: white;">
-                {{ 'PROYECTO_TOCORORO_TEXTO' | translate }}
-            </span> -->
+    <div class="w-100" fxLayout="row wrap" fxLayoutAlign="center center">
+        <div class="w-50 pt-2em" fxLayoutAlign="center center">
+            <a href="https://tocororo.upr.edu.cu" target="_blank" style="margin: 0; text-align: left; color: rgb(0, 0, 0, 0.87); text-decoration: none;">
+                <img src="/assets/images/tocororo.png" [alt]="'PROYECTO_TOCORORO' | translate" width="61.96" height="61.96" />
+                <!-- <span class="text-initial" style="max-width: 30em; padding-left: 10px; color: white;">
+                    {{ 'PROYECTO_TOCORORO_TEXTO' | translate }}
+                </span> -->
+            </a>
         </div>
-        <div class="footer-rigtside"
-            fxLayout="row wrap"
-            fxLayoutAlign="center center"
-            fxLayoutGap="1em"
-            [ngStyle.xs]="{'place-content': 'flex-end'}"
-        >
-            <a href="https://www.vliruos.be/en/projects/project/22?pid=4202" target="_blank" style="color: rgb(0, 0, 0, 0.87); text-decoration: none;">
-                <img src="/assets/images/vliruos_white.svg" [alt]="'PROYECTO_VLIR' | translate" width="240" />
+
+        <div class="w-50 pt-2em" fxLayoutAlign="center center">
+            <a href="https://www.vliruos.be/en/projects/project/22?pid=4202" target="_blank" style="margin: 0; text-align: right; color: rgb(0, 0, 0, 0.87); text-decoration: none;">
+                <img src="/assets/images/vliruos_white.svg" [alt]="'PROYECTO_VLIR' | translate" width="240" height="61.96" />
             </a>
         </div>
     </div>
 
+    <!-- style="padding-top: 40px;" -->
     <mat-toolbar-row
+        class="pt-2em"
         fxLayout="row wrap"
         fxLayoutAlign="center center"
         fxLayoutGap="1em"
-        style="padding-top: 40px;"
     >
         <a mat-mini-fab href="https://www.facebook.com/sceiba/" target="_blank" color="accent" matTooltip="Facebook">
             <mat-icon svgIcon="facebook" class="mat-18"></mat-icon>
@@ -54,7 +38,12 @@
         </a>
     </mat-toolbar-row>
 
-    <mat-toolbar class="footer-height" fxLayout="row wrap" fxLayout.mx="column" fxLayoutAlign="center center" color="primary">
+    <mat-toolbar
+        class="footer-height pt-2em"
+        fxLayout="row wrap"
+        fxLayoutAlign="center center"
+        color="primary"
+    >
         <mat-toolbar-row
             fxLayout="row wrap"
             fxLayout.xs="column"
@@ -116,21 +105,18 @@
                 </ng-container>
             </div>
         </mat-toolbar-row>
-
-        <mat-toolbar-row fxLayout="row wrap" fxFlex="100%" fxLayoutAlign="center center">
-            <p class="mat-h5" style="width: 80%; text-align: center; color:white; margin: 0; padding-top: 40px;">
-                {{ 'SCEIBA_PRIVACIDAD_1' | translate }}
-                <br>
-                {{ 'SCEIBA_PRIVACIDAD_2' | translate }} <a class="a-grey" href="http://creativecommons.org/licenses/by/4.0/" target="_blank"> Creative Commons CC by 4.0 License</a>
-            </p>
-        </mat-toolbar-row>
     </mat-toolbar>
 
-    <div fxLayout="column wrap" fxLayoutAlign="center center" style="padding: 1em;">
+    <div class="w-100" fxLayout="column wrap" fxLayoutAlign="center center" style="padding: 1em;">
+        <p class="mat-h5" style="text-align: center; color:white; margin: 0; padding-bottom: .6em;">
+            {{ 'SCEIBA_PRIVACIDAD_1' | translate }}
+            <br>
+            {{ 'SCEIBA_PRIVACIDAD_2' | translate }} <a class="a-grey" href="http://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons CC by 4.0 License</a>
+        </p>
         <a href="https://sceiba.cu" style="color: rgb(0, 0, 0, 0.87); text-decoration: none;">
-            <img src="/assets/icons/sceiba_white.svg" [alt]="'SCEIBA' | translate" width="120" height="50" />
+            <img src="/assets/icons/sceiba_white.svg" [alt]="'SCEIBA' | translate" width="120" height="61.96" />
         </a>
-        <p class="mat-h5" style="width: 80%; text-align: center; color:white; margin: 0;">
+        <p class="mat-h5" style="text-align: center; color:white; margin: 0;">
             {{ 'PORTAL_PUB' | translate }}
             <br>
             <small>
