--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -27,9 +27,15 @@
 .pt-50{
     padding-top: 50px;    
 }
+.pt-2em{
+    padding-top: 2em;
+}
 
 .pb-20{
     padding-bottom: 20px;
+}
+.pb-2em{
+    padding-bottom: 2em;
 }
 .ph-10 {
     padding-left: 10px;
