Improve the translation mechanism
Uses the new features that were included in toco-ng project (toco-lib)
for improving the translation mechanism in order to get
more abstraction and organization in the code.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,7 +96,7 @@
 
 <mat-menu #menuLanguages="matMenu">
   <a *ngFor="let lang of languageTexts; let i=index" mat-menu-item (click)="setLanguage(i)">
-    <mat-icon *ngIf="i == languageSelected; else elseTemplate_radio_button_unchecked">radio_button_checked</mat-icon>
+    <mat-icon *ngIf="i == currentLang; else elseTemplate_radio_button_unchecked">radio_button_checked</mat-icon>
     {{ lang }}
   </a>
 
