--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,22 +47,22 @@
 
         <div class="mySlides fade">
             <div class="numbertext">{{ slideIndex }} / 4</div>
-            <div class="text" markdown [src]="'/assets/markdown/home.slider1.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+            <div class="text" markdown [src]="getPath('/assets/markdown/home.slider1')"></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">{{ slideIndex }} / 4</div>
-            <div class="text" markdown [src]="'/assets/markdown/home.slider2.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+            <div class="text" markdown [src]="getPath('/assets/markdown/home.slider2')"></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">{{ slideIndex }} / 4</div>
-            <div class="text" markdown [src]="'/assets/markdown/home.slider3.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+            <div class="text" markdown [src]="getPath('/assets/markdown/home.slider3')"></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">{{ slideIndex }} / 4</div>
-            <div class="text" markdown [src]="'/assets/markdown/home.slider4.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+            <div class="text" markdown [src]="getPath('/assets/markdown/home.slider4')"></div>
         </div>
 
         <a class="prev" (click)="plusSlides(-1)">
@@ -91,7 +91,7 @@
                         <mat-card-subtitle>{{ 'SCEIBA_CATALOGO_SUB' | translate }}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
-                        <div class="p" markdown [src]="'/assets/markdown/home.catalog.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+                        <div class="p" markdown [src]="getPath('/assets/markdown/home.catalog')"></div>
                     </mat-card-content>
                     <mat-card-actions>
                         <a mat-button href="https://catalogo.sceiba.cu" target="_blank" class="apps" matTooltip="{{ 'CATALOGO' | translate }}">{{ 'ACCEDER' | translate }}</a>
@@ -106,7 +106,7 @@
                         <mat-card-subtitle>{{ 'SCEIBA_ORGANIZACIONES_SUB' | translate }}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
-                        <div class="p" markdown [src]="'/assets/markdown/home.orgs.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+                        <div class="p" markdown [src]="getPath('/assets/markdown/home.orgs')"></div>
                     </mat-card-content>
                     <mat-card-actions>
                         <a mat-button href="https://organizaciones.sceiba.cu" target="_blank" class="apps" matTooltip="{{ 'ORGANIZACIONES' | translate }}">{{ 'ACCEDER' | translate }}</a>
@@ -121,7 +121,7 @@
                         <mat-card-subtitle>{{ 'SCEIBA_VOCABULARIOS_SUB' | translate }}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
-                        <div class="p" markdown [src]="'/assets/markdown/home.vocabularios.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+                        <div class="p" markdown [src]="getPath('/assets/markdown/home.vocabularios')"></div>
                     </mat-card-content>
                     <mat-card-actions>
                         <a mat-button href="https://vocabularios.sceiba.cu" target="_blank" class="apps" matTooltip="{{ 'VOCABULARIOS' | translate }}">{{ 'ACCEDER' | translate }}</a>
@@ -136,7 +136,7 @@
                         <mat-card-subtitle>{{ 'DIRECTORIO_MES_SUB' | translate }}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
-                        <div class="p" markdown [src]="'/assets/markdown/home.mes.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+                        <div class="p" markdown [src]="getPath('/assets/markdown/home.mes')"></div>
                     </mat-card-content>
                     <mat-card-actions>
                         <a mat-button href="https://revistasmes.sceiba.cu" target="_blank" class="apps" matTooltip="{{ 'REVISTAS_MES' | translate }}">{{ 'ACCEDER' | translate }}</a>
@@ -149,7 +149,7 @@
     <img src="assets/icons/sceiba.middle.top.svg" alt="" style="margin-bottom: -4px; width: 100%;">
     <div class="w-100 bg-primary-color" fxLayout="column" fxLayoutAlign="center center">
         <div class="w-70 white-title" fxLayout="center">
-            <div class="p" markdown [src]="'/assets/markdown/home.sceiba.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+            <div class="p" markdown [src]="getPath('/assets/markdown/home.sceiba')"></div>
         </div>
     </div>
     <img src="assets/icons/sceiba.top.bottom.2.svg" alt="" style="margin-top: -4px; width: 100%;">
@@ -165,7 +165,7 @@
                         <mat-card-subtitle>{{ 'PERSONAS_SUB' | translate }}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
-                        <div class="p" markdown [src]="'/assets/markdown/home.persons.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+                        <div class="p" markdown [src]="getPath('/assets/markdown/home.persons')"></div>
                     </mat-card-content>
                     <mat-card-actions>
                     </mat-card-actions>
@@ -179,7 +179,7 @@
                         <mat-card-subtitle>{{ 'EVALUACION_SUB' | translate }}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
-                        <div class="p" markdown [src]="'/assets/markdown/home.evaluations.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+                        <div class="p" markdown [src]="getPath('/assets/markdown/home.evaluations')"></div>
                     </mat-card-content>
                     <mat-card-actions>
                     </mat-card-actions>
@@ -193,7 +193,7 @@
                         <mat-card-subtitle>{{ 'CARPETAS_PERS_SUB' | translate }}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-content>
-                        <div class="p" markdown [src]="'/assets/markdown/home.fields.' + ((transServ.currentLang == 'es') ? 'es.md' : 'en.md')"></div>
+                        <div class="p" markdown [src]="getPath('/assets/markdown/home.fields')"></div>
                     </mat-card-content>
                     <mat-card-actions>
                     </mat-card-actions>
