--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <img src="assets/icons/sceiba.top.bottom.2.svg" alt="" style="margin-top: -4px; width: 100%;">
+    <!-- <img src="assets/icons/sceiba.top.bottom.2.svg" alt="" style="margin-top: -4px; width: 100%;"> -->
 
     <!-- <div class="w-50 pt-50 ph-10" fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="space-around center">
         <div  fxLayout.xs="column" fxLayoutAlign="center center">
@@ -146,13 +146,13 @@
         </div>
     </div>
 
-    <img src="assets/icons/sceiba.middle.top.svg" alt="" style="margin-bottom: -4px; width: 100%;">
-    <div class="w-100 bg-primary-color" fxLayout="column" fxLayoutAlign="center center">
+    <!-- <img src="assets/icons/sceiba.middle.top.svg" alt="" style="margin-bottom: -4px; width: 100%;"> -->
+    <div class="w-100 bg-primary-color" fxLayout="column" fxLayoutAlign="center center" style="margin-top: 20px; width: 100%;">
         <div class="w-70 white-title" fxLayout="center">
             <div class="p" markdown [src]="getPath('/assets/markdown/home.sceiba')"></div>
         </div>
     </div>
-    <img src="assets/icons/sceiba.top.bottom.2.svg" alt="" style="margin-top: -4px; width: 100%;">
+    <!-- <img src="assets/icons/sceiba.top.bottom.2.svg" alt="" style="margin-top: -4px; width: 100%;"> -->
 
     <div class="pt-50" ngClass.xs="pt-20 ph-30 pb-20">
         <h1 class="mat-display-1 text-center" style="margin: 0;">{{ 'PROXIMAMENTE' | translate }}</h1>
@@ -216,11 +216,11 @@
       </div>
     </div>
 
-    <mat-card class="mat-elevation-z1 w-70 m-1 mb-1 ligth-green-card">
+    <!-- <mat-card class="mat-elevation-z1 w-70 m-1 mb-1 ligth-green-card">
         <mat-card-title>{{ 'CONTACTE_CON_NOS' | translate }}</mat-card-title>
         <mat-card-content>
             <app-contact></app-contact>
         </mat-card-content>
-    </mat-card>
+    </mat-card> -->
 
 </div>
