update footer and header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     fxLayoutAlign="space-between center"
     style="height: auto !important; min-height: 80px"
   >
-    <div style="width: 330px; display: flex; align-items: center">
+    <div style="display: flex; align-items: center">
       <div class="triangle">
         <span
           matTooltipClass="tooltip-beta-red"
@@ -90,6 +90,16 @@
         <mat-icon class="mat-18">account_circle</mat-icon>
       </button>
 
+    </div>
+    <div class="menu-full">
+      <span style="width: 5%;"></span>
+      <a mat-button class="font-bold" routerLink="/">Inicio</a>
+      <a mat-button class="font-bold" href="https://organizaciones.sceiba.cu" target="_blank">Organizaciones</a>
+      <a mat-button class="font-bold" href="https://personas.sceiba.cu" target="_blank">Personas</a>
+      <a mat-button class="font-bold" href="https://catalogo.sceiba.cu" target="_blank">Catálogo</a>
+      <a mat-button class="font-bold" href="https://revistasmes.sceiba.cu" target="_blank">Revistas MES</a>
+      <a mat-button class="font-bold" href="https://evaluaciones.sceiba.cu" target="_blank">Evaluación</a>
+      <a mat-button class="font-bold" href="https://vocabularios.sceiba.cu/es" target="_blank">Vocabularios</a>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
