--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,7 +80,7 @@
         </div>
     </div>
 
-    <div class="pt-50" ngClass.xs="pt-20 ph-30 pb-20">
+    <div class="" ngClass.xs="pt-20 ph-30 pb-20">
         <h1 class="mat-display-1 text-center" style="margin: 0;">{{ 'PROD_SERV' | translate }}</h1>
         <div class="pt-20" ngClass.xs="pt-5" fxLayout="row wrap" fxLayoutAlign="center" fxLayoutGap="20px" fxLayout.xs="column">
             <div class="pt-20" fxFlex=30%>
@@ -147,11 +147,11 @@
     </div>
 
     <!-- <img src="assets/icons/sceiba.middle.top.svg" alt="" style="margin-bottom: -4px; width: 100%;"> -->
-    <div class="w-100 bg-primary-color" fxLayout="column" fxLayoutAlign="center center" style="margin-top: 20px; width: 100%;">
+    <!-- <div class="w-100 bg-primary-color" fxLayout="column" fxLayoutAlign="center center" style="margin-top: 20px; width: 100%;">
         <div class="w-70 white-title" fxLayout="center">
             <div class="p" markdown [src]="getPath('/assets/markdown/home.sceiba')"></div>
         </div>
-    </div>
+    </div> -->
     <!-- <img src="assets/icons/sceiba.top.bottom.2.svg" alt="" style="margin-top: -4px; width: 100%;"> -->
 
     <div class="pt-50" ngClass.xs="pt-20 ph-30 pb-20">
@@ -202,19 +202,6 @@
         </div>
     </div>
 
-    <div class="pt-50" ngClass.xs="pt-20 pb-20" fxLayout="column" fxLayoutAlign="center center">
-        <h1 class="mat-display-1 text-center" style="margin: 0;">{{ 'PARTICIPANTES' | translate }}</h1>
-        <!-- <mat-divider [ngStyle.xs]="{ width: '100%'}" [ngStyle]="{ width: '90%'}"></mat-divider> -->
-      <div class="pt-30 w-80" ngClass.xs="pt-20 w-100" style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center; align-items: center;">
-        <a href="https://www.upr.edu.cu/home/index" target="_blank"> <img src="/assets/images/upr.png" width="93" height="108" style="margin:1em"></a>
-        <a href="http://www.uh.cu/" target="_blank"> <img src="/assets/images/uh.png" width="93" height="108" style="margin:1em"></a>
-        <a href="http://www.lamolina.edu.pe/" target="_blank"> <img src="/assets/images/lamolina.jpg" width="93" height="108" style="margin:1em"></a>
-        <a href="https://www.usil.edu.pe/?verified=true" target="_blank"> <img src="/assets/images/usil.png" width="93" height="108" style="margin:1em"></a>
-        <a href="https://www.uhasselt.be/en" target="_blank"> <img src="/assets/images/hasselt.png" width="140" height="108" style="margin:1em"></a>
-        <a href="https://www.uantwerpen.be/en/" target="_blank"> <img src="/assets/images/antwerpent.png" width="93" height="108" style="margin:1em"></a>
-        <a href="https://www.mes.gob.cu/" target="_blank"> <img src="/assets/images/mes.png" width="209" height="68" style="margin:1em"></a>
-      </div>
-    </div>
 
     <!-- <mat-card class="mat-elevation-z1 w-70 m-1 mb-1 ligth-green-card">
         <mat-card-title>{{ 'CONTACTE_CON_NOS' | translate }}</mat-card-title>
