--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,7 +40,16 @@
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
 }
-
+.menu-full{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.font-bold{
+    font-weight: bold;
+}
 .center-elements {
     width: auto;
 }
