update search and record view

--- a/src/app/record/record-view/record-view.component.html
+++ b/src/app/record/record-view/record-view.component.html
@@ -1,21 +1,13 @@
-<mat-toolbar
-  color="accent"
-  fxLayout="row wrap"
-  fxLayout.xs="column"
-  fxLayoutAlign="space-between center"
->
-  <mat-toolbar-row>
-    <!-- <button mat-icon-button (click)="onClick()">
-            <mat-icon class="mat-18">arrow_back</mat-icon>
-        </button> -->
-    <span>Información del Documento</span>
-  </mat-toolbar-row>
-</mat-toolbar>
+<div style="height: 80px; padding: 0 16px; flex-flow: row wrap; box-sizing: border-box; display: flex; place-content: center space-between;
+    align-items: center;"
+  >
+  <span class="mat-h2">Información del Documento</span>
+</div>
 
 <toco-progress [loading]="!record"></toco-progress>
 
 <div fxLayout="row" fxLayoutAlign="center" *ngIf="record">
-  <mat-card style="width: 80%">
+  <mat-card >
     <mat-card-header>
       <mat-card-title>{{ record.title }}</mat-card-title>
       <!-- ID -->
