--- a/src/app/record/record-view/sourcerecord-view/sourcerecord-view.component.html
+++ b/src/app/record/record-view/sourcerecord-view/sourcerecord-view.component.html
@@ -43,7 +43,7 @@
   <legend class="static-table-fieldset-legend">Recolectado en:</legend>
 
   <mat-accordion>
-    <mat-expansion-panel class="green-bg">
+    <mat-expansion-panel class="">
       <mat-expansion-panel-header>
         {{ source.name }}
       </mat-expansion-panel-header>
