--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,7 +28,7 @@
     <mat-toolbar class="footer-height" fxLayout="row wrap" fxLayout.xs="column" fxLayoutAlign="center center"
         color="primary">
         <mat-toolbar-row fxLayout="row wrap" fxLayoutAlign="center flex-start" style="padding: 16px 0px; flex-flow: row wrap; place-content: center;">
-            <div class="w-30" style="min-width: 15em; display: flex;
+            <div class="w-30" style="min-width: 15em; margin: 8px; display: flex;
             flex-direction: row; flex-wrap: wrap; justify-content: space-around;">
                 <a href="https://sceiba.cu" style="color: rgb(0, 0, 0, 0.87); text-decoration: none;">
                     <img src="/assets/icons/sceiba_white.svg" [alt]="'SCEIBA' | translate" width="150" />
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="pt-30 w-40" ngClass.xs="pt-20 w-100"
-                style="display: flex; flex-direction: row;  flex-wrap: wrap; justify-content: space-evenly; align-items: flex-start; align-content: flex-start;">
+                style="margin: 8px; display: flex; flex-direction: row;  flex-wrap: wrap; justify-content: space-evenly; align-items: flex-start; align-content: flex-start;">
 
                 <div class="mat-body" style="display: flex; flex-direction: row; flex-wrap: wrap;">
                     <span class="text-large">{{'FOOTER_TEXT_INFORMACION' | translate}}</span>
@@ -94,8 +94,8 @@
                     </div>
                 </div>
             </div>
-            <div class="mat-body"
-                style="width: 20%; display: flex; flex-direction: row; flex-wrap: wrap; align-items: center;">
+            <div class="mat-body" 
+                style="width: 22em; margin: 8px; display: flex; flex-direction: row; flex-wrap: wrap; align-items: center;">
                 <!-- <span style="width: 16%;"></span> -->
                 <span class="text-large" style="width: 100%;">{{'SIGUENOS' | translate}} </span>
                 <a mat-icon-button href="https://www.facebook.com/sceiba/" target="_blank" matTooltip="Facebook">
