--- a/src/styles.scss
+++ b/src/styles.scss
@@ -330,4 +330,10 @@ body { margin: 0; }
     border-color: mat-color($toco-primary);
  }
 
+ .markdown-card-green-light{
+    background: #f3fff9;
+    padding: 8px;
+    margin: 8px;
+    border-radius: 16px;
+}
  
