--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,8 +13,15 @@
 }
 .apps{
     margin: .5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    font-size: smaller;
     img{
-        width: 90px;
+        width: 55px; 
+        height: 55px
     }
 }
 .MES{
