--- a/src/app/help/static-pages/static-pages.component.html
+++ b/src/app/help/static-pages/static-pages.component.html
@@ -1,3 +1,3 @@
-<div markdown [src]="src" style="margin: 2em;"></div>
+<div markdown class="mat-h4" [src]="src" style="margin: 2em;"></div>
 
 <!-- <div>{{src}}</div> -->
