--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -269,7 +269,7 @@
       <span>{{'REVISTAS' | translate}}</span>
     </a>
     <a
-      href="https://revistasmes.sceiba.cu"
+      href="https://courses.sceiba.org"
       target="_blank"
       class="apps mat-caption"
       matTooltip="{{ 'SMOODLE' | translate }}"
