--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,13 +82,20 @@
         <mat-icon class="mat-18">person_pin</mat-icon>
       </button>
 
-      <button *ngIf="!name"
+      <toco-authentication *ngIf="!user"
+        [oauthInfo]="oauthInfo"
+        [isButtonLogin]="'true'"
+        [isButtonLoginIcon]="'true'"
+        [isButtonLoginText]="'AUTENTICARSE' | translate"
+      >
+      </toco-authentication>
+      <!-- <button *ngIf="!name"
         mat-icon-button
         [matMenuTriggerFor]="menuLogin"
         matTooltip="{{ 'AUTENTICARSE' | translate }}"
       >
         <mat-icon class="mat-18">account_circle</mat-icon>
-      </button>
+      </button> -->
 
     </div>
     <div class="menu-full">
@@ -148,15 +155,21 @@
 </mat-menu>
 
 <mat-menu #menuLogin="matMenu">
-  <a mat-menu-item (click)="login()">
+  <!-- <a mat-menu-item (click)="login()">
       <mat-icon>lock</mat-icon>
       {{ 'AUTENTICARSE' | translate }}
   </a>
   <a mat-menu-item (click)="login()" >
-    <!-- href="{{ urlSignUp }}" -->
       <mat-icon>assignment_ind</mat-icon>
       {{ 'REGISTRARSE' | translate }}
-  </a>
+  </a> -->
+  <toco-authentication *ngIf="!user"
+        [oauthInfo]="oauthInfo"
+        [isButtonLogin]="'true'"
+        [isButtonLoginIcon]="'true'"
+        [isButtonLoginText]="'AUTENTICARSE' | translate"
+      >
+      </toco-authentication>
 </mat-menu>
 
 <mat-menu #menuUser="matMenu">
@@ -192,10 +205,6 @@
   <a mat-menu-item (click)="logoff()">
     <mat-icon>exit_to_app</mat-icon>
     {{ 'SALIR' | translate }}
-  </a>
-  <a mat-menu-item (click)="me()">
-    <mat-icon>exit_to_app</mat-icon>
-    {{ 'YO' | translate }}
   </a>
 
 </mat-menu>
